--- a/.local/share/applications/Hefftor Skel App.desktop
+++ b/.local/share/applications/Hefftor Skel App.desktop
@@ -3,8 +3,8 @@ Name=Hefftor Skel App
 GenericName=Skel Config Copy
 X-GNOME-FullName=Hefftor Skel App
 Comment=Copy /etc/skel into your configs
-Exec=~/.local/bin/hefftor-skel-app
-Icon=~/.local/share/Hefftor\ Skel\ App/icon.svg
+Exec=sh -c "$HOME/.local/bin/hefftor-skel-app"
+Icon=hefftorlinux
 Terminal=false
 Type=Application
 Categories=GTK;Settings;Security;X-GNOME-Settings-Panel;X-GNOME-SystemSettings;X-Unity-Settings-Panel;X-XFCE-SettingsDialog;X-XFCE-SystemSettings;
