--- a/usr/share/applications/Hefftor Skel App.desktop
+++ b/usr/share/applications/Hefftor Skel App.desktop
@@ -3,7 +3,7 @@ Name=Hefftor Skel App
 GenericName=Skel Config Copy
 X-GNOME-FullName=Hefftor Skel App
 Comment=Copy /etc/skel into your configs
-Exec=sh -c "$HOME/.local/bin/hefftor-skel-app"
+Exec=hefftor-skel-app
 Icon=hefftorlinux
 Terminal=false
 Type=Application
