--- a/usr/share/applications/Hefftor Skel App.desktop
+++ b/usr/share/applications/Hefftor Skel App.desktop
@@ -4,7 +4,7 @@ GenericName=Skel Config Copy
 X-GNOME-FullName=Hefftor SkelApp
 Comment=Copy /etc/skel into your configs
 Exec=hefftor-skelapp
-Icon=hefftorlinux
+Icon=/usr/share/Hefftor-SkelApp/images/hefftorlinux.svg
 Terminal=false
 Type=Application
 Categories=GTK;Settings;Security;X-GNOME-Settings-Panel;X-GNOME-SystemSettings;X-Unity-Settings-Panel;X-XFCE-SettingsDialog;X-XFCE-SystemSettings;
